make some change for the desktop size

--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -176,4 +176,7 @@ nav div .secondary {
 	padding-top: 87px;
 	border-bottom: solid 2px$black;
 	top: 0;
+	// @include desktop {
+	// 	width: 1420px;
+	// }
 }
