--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -1,4 +1,10 @@
 //front page
+
+.site-content{
+  @include desktop{
+  margin: 58px 80px;
+  }
+}
 // media screen for mobile (max-width: 480px)
 .site-main {
     .home-wrapper {
@@ -6,20 +12,20 @@
         height: 585px;
         background-color: rgba(0,0,0,0.74);
 
-        // @include desktop{
-        //   width: 541.64px;
-        //   height: 555px;
-        //   background-color: rgba(0,0,0,0.74);
-        //   position: absolute;
-        // }
+        @include desktop{
+          width: 541.64px;
+          height: 555px;
+          background-color: rgba(0,0,0,0.74);
+          position: relative;
+        }
         .home-img{
-        //   @include desktop{
-        //     background-color: rgba(0,0,0,0.74);
-        //     width: 1264px;
-        //     height: 555px;
-        //     z-index: -1;
-        //     position: relative;
-        //   }
+          @include desktop{
+            background-color: rgba(0,0,0,0.74);
+            width: 1264px;
+            height: 555px;
+            z-index: -1;
+            position: absolute;
+          }
         }
 
         h2 {
@@ -35,10 +41,11 @@
             height: 74px;
             border-bottom: 4px solid #fff;
 
-            // @include desktop{
-            //   z-index: -1;
-            //   position: relative;
-            // }
+            @include desktop{
+              font-size: 46px;
+              padding-top: 70px;
+              line-height: 0;
+            }
         }
         p {
             height: 160px;
@@ -47,14 +54,13 @@
             line-height: 40px;
             color: #fff;
             margin: 30px;
-            // @include desktop{
-            //   height: auto;
-            //   display: block;
-            //   z-index: -1;
-            //   position: relative;
-            //   visibility: visible;
-            // }
-
+            @include desktop{
+              width: 447px;
+              height: 230px;
+              font-family: "Noto Sans";
+              font-size: 24px;
+              line-height: 46px;
+            }
         }
         .red-btn {
             background-color: #F76072;
@@ -67,12 +73,15 @@
             font-weight: 300;
             text-shadow: none;
             letter-spacing: 0.8px;
-            // @include desktop{
-            //   z-index: -1;
-            //   position: relative;
-            //   visibility: visible;
-            // }
-
+            @include desktop{
+              padding: 10px;
+              font-size: 24px;
+              display: block;
+              max-width: 320px;
+              margin: 90px 100px;
+              text-align: center;
+            }
+ 
           }
         // }//welcome-wrapper
     }//home
@@ -80,12 +89,12 @@
 //this is for the quick links
 .links-wrapper {
     width: 480px;
-    // @include desktop{
-    //   flex-direction: row;
-    //   display: flex;
-    //   margin: 0;
-    //   padding: 80px 0;
-    // }
+    @include desktop{
+      flex-direction: row;
+      display: flex;
+      margin: 0;
+      padding: 175px 0;
+    }
     h2 {
         padding: 0;
         width: 480px;
@@ -340,5 +349,6 @@ a {
 body{
   background-color: #ffffff;
 }
+
 
 /***************************************************/
