--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -280,10 +280,6 @@ html {
   font-size: 16px;
   font-size: 1rem; }
 
-.mobile-container {
-  width: 27.5rem;
-  margin: 0 auto; }
-
 *,
 *:before,
 *:after {
@@ -529,7 +525,6 @@ object {
 /* Front page */
 .cfsBorder {
   width: 60%;
-  overflow: scroll;
   text-align: justify;
   height: 150px;
   border-left: 5px solid #D93B57;
@@ -559,7 +554,7 @@ div .menu-primary-menu-container {
     height: 100%;
     width: 100%; }
 
-@media screen and (max-width: 769px) {
+@media (min-width: 48rem) {
   .menu-primary-menu-container {
     display: none; } }
 
@@ -600,7 +595,7 @@ div .menu-primary-menu-container {
   -ms-flex-pack: justify;
       justify-content: space-between;
   height: 5rem; }
-  @media (min-width: 48rem) {
+  @media (min-width: 73rem) {
     .main-navigation-container {
       display: inline-block;
       height: 8rem;
@@ -609,7 +604,7 @@ div .menu-primary-menu-container {
 .main-navigation {
   width: 100%; }
 
-@media (min-width: 48rem) {
+@media (min-width: 73rem) {
   .menu-primary-menu-container {
     display: inline-block; }
     .menu-primary-menu-container ul li {
@@ -634,7 +629,7 @@ div .secondary {
   padding-right: 2rem;
   margin-top: 20px;
   background-color: #248E6A; }
-  @media (min-width: 48rem) {
+  @media (min-width: 73rem) {
     div .secondary {
       white-space: nowrap;
       overflow: hidden;
@@ -663,7 +658,7 @@ div .secondary {
   margin: 10px 0 20px 30px;
   width: 14rem;
   height: 7rem; }
-  @media (min-width: 48rem) {
+  @media (min-width: 73rem) {
     .montessori-logo {
       margin: 0;
       padding: 30px 0 30px 10px;
@@ -689,14 +684,14 @@ div .secondary {
       align-items: center;
   -ms-flex-pack: justify;
       justify-content: space-between; }
-  @media (min-width: 48rem) {
+  @media (min-width: 73rem) {
     .main-menu-wrapper {
       white-space: nowrap;
       overflow: hidden; } }
 
 .site-header {
   z-index: 999;
-  min-width: 27.5rem;
+  min-width: 30rem;
   width: 100%;
   background: rgba(255, 255, 255, 0.7);
   position: fixed;
@@ -722,10 +717,14 @@ div .secondary {
   font-family: "PT Sans";
   overflow: hidden;
   font-size: 0.8rem;
-  width: 27.5rem;
+  max-width: 30rem;
+  min-width: 380px;
   height: 150px;
   background-color: #125A50;
   color: #fff; }
+  @media (min-width: 73rem) {
+    .site-footer {
+      width: 100%; } }
 
 /*block Items*/
 .footer-block-item1 {
@@ -911,42 +910,54 @@ div .secondary {
       font-size: 20px;
       line-height: 46px;
       color: #000;
-
-      margin: 45px; }
-  .support-wrapper .information .red-btn {
-    width: 185px;
-    height: 47px;
-    background-color: #F76072;
-    border-color: #F76072;
-    border-radius: 6px;
-    color: #fff;
-    margin-left: 20px;
-    padding: 8px;
-    box-shadow: none;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    text-decoration: none; }
-  .support-wrapper .information .green-btn {
-    background-color: #4FC8A1;
-    border-color: #4FC8A1;
-    border-radius: 6px;
-    font-family: "Noto Sans";
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 30px;
-    color: #fff;
-    margin-left: 20px;
-    padding: 8px;
-    box-shadow: none;
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    text-decoration: none; }
-
+      margin: 40px; }
+      .support-wrapper .information p .info {
+        width: 470px;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        font-weight: bold;
+        line-height: 42px;
+        color: #000; }
+      .support-wrapper .information p .img-text {
+        width: 470px;
+        font-family: "Noto Sans";
+        font-size: 20px;
+        line-height: 46px;
+        color: #000;
+        margin: 45px; }
+    .support-wrapper .information .red-btn {
+      width: 185px;
+      height: 47px;
+      background-color: #F76072;
+      border-color: #F76072;
+      border-radius: 6px;
+      color: #fff;
+      margin-left: 20px;
+      padding: 8px;
+      box-shadow: none;
+      font-family: "Noto Sans";
+      font-size: 20px;
+      font-weight: 300;
+      text-shadow: none;
+      letter-spacing: 0.8px;
+      text-decoration: none; }
+    .support-wrapper .information .green-btn {
+      background-color: #4FC8A1;
+      border-color: #4FC8A1;
+      border-radius: 6px;
+      font-family: "Noto Sans";
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      line-height: 30px;
+      color: #fff;
+      margin-left: 20px;
+      padding: 8px;
+      box-shadow: none;
+      font-weight: 300;
+      text-shadow: none;
+      letter-spacing: 0.8px;
+      text-decoration: none; }
 
 .all-features {
   margin-bottom: 30px; }
@@ -1068,28 +1079,32 @@ body {
       justify-content: space-around;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  position: relative;
-  -webkit-transition: 1.9s;
-  -webkit-transform-style: preserve-3d;
-  -moz-transition: 1.9s;
-  -moz-transform-style: preserve-3d;
-  -o-transition: 1.9s;
-  -o-transform-style: preserve-3d;
-  transition: 1.9s;
-  transform-style: preserve-3d; }
-  .philosophy-grid:hover {
-    transform: rotateY(180deg); }
+  position: relative; }
+  @media (min-width: 73rem) {
+    .philosophy-grid {
+      -webkit-transition: 1.9s;
+      -webkit-transform-style: preserve-3d;
+      -moz-transition: 1.9s;
+      -moz-transform-style: preserve-3d;
+      -o-transition: 1.9s;
+      -o-transform-style: preserve-3d;
+      transition: 1.9s;
+      transform-style: preserve-3d; }
+      .philosophy-grid:hover {
+        transform: rotateY(180deg); } }
   .philosophy-grid .philosophy-img {
     z-index: -1;
     height: auto;
     text-align: center;
     overflow: hidden;
     padding: 20px;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
     position: relative;
     width: 100%;
     height: 200px; }
+    @media (min-width: 73rem) {
+      .philosophy-grid .philosophy-img {
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden; } }
   .philosophy-grid h2 {
     z-index: 1;
     text-align: center;
@@ -1103,9 +1118,11 @@ body {
     height: auto;
     overflow: hidden;
     padding: 20px;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
     position: absolute; }
+    @media (min-width: 73rem) {
+      .philosophy-grid h2 {
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden; } }
   .philosophy-grid p {
     text-align: left;
     display: inline-block;
@@ -1114,18 +1131,22 @@ body {
     top: 0px;
     left: 0px;
     z-index: 1000000;
-    height: 400px;
-    width: 100%;
+    height: 200px;
+    width: 400px;
     border-radius: 10px;
     border: 1px solid #248E6A;
-    margin: 0;
     text-align: left;
-    overflow: scroll;
-    padding: 3px;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    background-color: #fff;
-    transform: rotateY(180deg); }
+    overflow: hidden;
+    padding: 5px;
+    visibility: hidden; }
+    @media (min-width: 73rem) {
+      .philosophy-grid p {
+        right: 500px;
+        visibility: visible;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        background-color: #fff;
+        transform: rotateY(180deg); } }
 
 /*.main-history,
 .main-materials,
