--- a/themes/montessori-theme/sass/_mixins.scss
+++ b/themes/montessori-theme/sass/_mixins.scss
@@ -14,9 +14,15 @@
 	margin-left: auto;
 	margin-right: auto;
 }
-
+//Desktop Screen size
 @mixin desktop {
 	@media (min-width: #{$desktop-width}) {
+		@content;
+	}
+}
+//Tablet Screen size
+@mixin tablet {
+	@media (min-width: #{$Tablet-width}) {
 		@content;
 	}
 }
@@ -25,5 +31,5 @@
 	display: flex;
 	align-items: $align;
 	justify-content: $justify;
-	
+
 }
