--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -20,11 +20,12 @@
 }
 .philosophy-grid{
     /*background-color:#AFF1D3;*/
+
      width: 48%;
      @include flex(center,space-around);
      flex-wrap: wrap;
          position: relative;
-         -webkit-transition: 1.9s;
+           @include desktop{   -webkit-transition: 1.9s;
          -webkit-transform-style: preserve-3d;
          -moz-transition: 1.9s;
          -moz-transform-style: preserve-3d;
@@ -38,16 +39,17 @@
              -o-transform: rotateY(180deg);
              transform: rotateY(180deg);
          }
+       }
     .philosophy-img {
       z-index: -1;
       height: auto;
       text-align: center;
       overflow: hidden;
       padding: 20px;
-      -webkit-backface-visibility: hidden;
+        @include desktop{  -webkit-backface-visibility: hidden;
       -moz-backface-visibility: hidden;
       -o-backface-visibility: hidden;
-      backface-visibility: hidden;
+      backface-visibility: hidden;}
         position: relative;
         width:100%;
         height:200px;
@@ -63,10 +65,10 @@ h2{ z-index: 1;
      height: auto;
      overflow: hidden;
      padding: 20px;
-     -webkit-backface-visibility: hidden;
+  @include desktop{   -webkit-backface-visibility: hidden;
      -moz-backface-visibility: hidden;
      -o-backface-visibility: hidden;
-     backface-visibility: hidden;
+     backface-visibility: hidden;}
        position: absolute;
 
  }
@@ -78,15 +80,18 @@ h2{ z-index: 1;
         top:0px;
         left: 0px;
         z-index: 1000000;
-       height: 400px;
-        width:100%;
+       height: 200px;
+        width:400px;
         border-radius: 10px;
         border: 1px solid #248E6A;
-        margin: 0;
         text-align: left;
-        overflow: scroll;
-        padding: 3px;
-        -webkit-backface-visibility: hidden;
+        overflow: hidden;
+        padding: 5px;
+        visibility: hidden;
+      @include desktop{
+        right:500px;
+          visibility: visible;
+         -webkit-backface-visibility: hidden;
         -moz-backface-visibility: hidden;
         -o-backface-visibility: hidden;
         backface-visibility: hidden;
@@ -98,7 +103,7 @@ h2{ z-index: 1;
 
     }
 }
-
+}
 /*.main-history,
 .main-materials,
 .philosophy-section{
