--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -1,6 +1,7 @@
 /*--------------------------------------------------------------
 # Montessori
 --------------------------------------------------------------*/
+/////*Start History Section**/////
 .main-history{
  margin: 0 auto;
 
@@ -13,19 +14,25 @@
         text-align: left;
     }
 }
+
+////************philosophy Section ************/////
+
 .main-philosophy{
     @include flex(center,space-around);
     flex-wrap: wrap;
         position: relative;
-}
+        @include desktop{width:900px;
+}}
 .philosophy-grid{
     /*background-color:#AFF1D3;*/
 
-     width: 48%;
+
      @include flex(center,space-around);
      flex-wrap: wrap;
          position: relative;
-           @include desktop{   -webkit-transition: 1.9s;
+           @include tablet{width:27%;
+
+             -webkit-transition: 1.9s;
          -webkit-transform-style: preserve-3d;
          -moz-transition: 1.9s;
          -moz-transform-style: preserve-3d;
@@ -46,14 +53,17 @@
       text-align: center;
       overflow: hidden;
       padding: 20px;
-        @include desktop{  -webkit-backface-visibility: hidden;
+        @include desktop{
+      -webkit-backface-visibility: hidden;
       -moz-backface-visibility: hidden;
       -o-backface-visibility: hidden;
       backface-visibility: hidden;}
         position: relative;
         width:100%;
         height:200px;
-    }
+        img{@include desktop{width:367px;
+        height:367px;}
+    }}
 h2{ z-index: 1;
      text-align: center;
      display: inline-block;
@@ -65,6 +75,7 @@ h2{ z-index: 1;
      height: auto;
      overflow: hidden;
      padding: 20px;
+     bottom: -18px;
   @include desktop{   -webkit-backface-visibility: hidden;
      -moz-backface-visibility: hidden;
      -o-backface-visibility: hidden;
@@ -89,7 +100,7 @@ h2{ z-index: 1;
         padding: 5px;
         visibility: hidden;
       @include desktop{
-        right:500px;
+
           visibility: visible;
          -webkit-backface-visibility: hidden;
         -moz-backface-visibility: hidden;
@@ -104,6 +115,13 @@ h2{ z-index: 1;
     }
 }
 }
+//////************philosophy Section ************//////
+
+////////*******Start Materials Section******/////////
+
+
+
+////////*******End Materials Section******/////////
 /*.main-history,
 .main-materials,
 .philosophy-section{
@@ -139,66 +157,9 @@ padding-bottom: 60px;
 
 }}
 
-.philosophy-titles { width: 200px;
-a{
-
-    text-align: left;
-    text-decoration: none;
-    font-size: 1rem;
-    cursor: pointer;
-    position:absolute;
-    color:green;
-}
-}
-.philosophy-titles a:hover{
-
-}
-
-.philosophy-content p{
-    width: 200px;
-    */
-    /*position: absolute;*/
 
 
 
-///**** start philosophy section ***///
-
-
-/*
-ul .each-philosophy{
-
-width:200px;
-
-
-    & .philosophy-thumbnail{
-
-
-        height: 200px;
-    }
-    div h2{
-        font-family: $font_title;
-        display: inline-block;
-        font-size: 1rem;
-        width: 200px;
-        height: 33px;
-        position: absolute;
-        z-index: 3;
-      color:green;
-
-      text-align: center;
-    }
-     img{
-       margin-top: 13px;
-        z-index: 1;
-       position: relative;
-    }
-
-}
-.main-philosophy{
- }*/
-//****** end philosophy section  ******//
-
-////////Start Materials Section /////
 
 
 /*Start Resources Section  */
