--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -1,7 +1,9 @@
 /********* Montessori Site Structure **********/
 
 $base_space_unit: 1.5em;
-
+$basic_pading: 0.625rem; /// ==>10px ////
+$basic_margin: 0.625rem; /// ==>10px ////
+$basic_hline_height: 0.625rem; /// ==>10px ////
 ///Screen Size///
 
 $desktop_width: 48rem; //768px
