--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1118,7 +1118,7 @@ padding-bottom: 60px;
 }*/
 /*.history-thumbnail{
     img{
-
+       
     }
 }*/
 /*
@@ -1254,18 +1254,29 @@ width:200px;
 /*--------------------------------------------------------------
 # About Page
 --------------------------------------------------------------*/
-.site-content {
-  max-width: 480px;
+* {
+  box-sizing: border-box; }
+
+.about-wrapper {
+  max-width: 27.5rem;
   margin: 0 auto;
-  padding-left: 20;
-  padding-right: 20; }
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  -ms-flex-align: center;
+      align-items: center; }
+  .about-wrapper h2 {
+    font-family: "Asap";
+    font-size: 2rem;
+    font-weight: normal;
+    line-height: 2.625rem;
+    text-align: left;
+    color: #000000; }
 
 .target {
-  background: #0099cc;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: auto;
   height: 160px;
-  padding: 5px;
+  padding: 0.625rem;
   display: none; }
 
 site-main .involved-wrapper {
