--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -58,30 +58,30 @@ green-btn{
 
     }
 
-    // h1{
-    //   a{
-    //
-    //     text-decoration: none;
-    //     padding-left:19px;
-    //     padding-right:36px;
-    //     padding-top: 25px;
-    //     padding-bottom: 19px;
-    //     width: 200px;
-    //     height: 120px;
-    //     font-size: 30px;
-    //     color:#000;
-    //     background-color: #4FC8A1;
-    //     font-family: "Noto Sans";
-    //     font-weight: bold;
-    //     text-align: center;
-    //     line-height: 30px;
-    //     margin-left: 15px;
-    //     box-shadow: none;
-    //     font-weight: 300;
-    //     text-shadow: none;
-    //     letter-spacing: .8px;
-    //     display: block;
-
+//     h1{
+//       a{
+//
+//         text-decoration: none;
+//         padding-left:19px;
+//         padding-right:36px;
+//         padding-top: 25px;
+//         padding-bottom: 19px;
+//         width: 200px;
+//         height: 120px;
+//         font-size: 30px;
+//         color:#000;
+//         background-color: #4FC8A1;
+//         font-family: "Noto Sans";
+//         font-weight: bold;
+//         text-align: center;
+//         line-height: 30px;
+//         margin-left: 15px;
+//         box-shadow: none;
+//         font-weight: 300;
+//         text-shadow: none;
+//         letter-spacing: .8px;
+//         display: block;
+// }
 .a h2{
   color: #000;
 
