--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1263,10 +1263,11 @@ width:200px;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   -ms-flex-align: center;
-      align-items: center; }
-  .about-wrapper h2 {
+      align-items: center;
+  background-color: green; }
+  .about-wrapper h1 {
     font-family: "Asap";
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: normal;
     line-height: 2.625rem;
     text-align: left;
@@ -1336,3 +1337,25 @@ site-main .involved-title green-btn {
     text-shadow: none;
     letter-spacing: .8px;
     display: block; }
+
+/*--------------------------------------------------------------
+# NW Program Page
+--------------------------------------------------------------*/
+* {
+  box-sizing: border-box; }
+
+.nw-program-wrapper {
+  max-width: 27.5rem;
+  margin: 0 auto;
+  padding-left: 1.25rem;
+  padding-right: 0.9375rem;
+  -ms-flex-align: center;
+      align-items: center;
+  background-color: green; }
+  .nw-program-wrapper h1 {
+    font-family: "Asap";
+    font-size: 2.5rem;
+    font-weight: normal;
+    line-height: 2.625rem;
+    text-align: left;
+    color: #000000; }
