--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -1,10 +1,5 @@
 //front page
 
-.site-content{
-  @include desktop{
-  margin: 58px 80px;
-  }
-}
 // media screen for mobile (max-width: 480px)
 .site-main {
     .home-wrapper {
@@ -81,36 +76,39 @@
               margin: 90px 100px;
               text-align: center;
             }
- 
+
           }
         // }//welcome-wrapper
     }//home
 }
-//this is for the quick links
+//this is for the quick links section
+
+.link-title{
+h2 {
+    padding: 0;
+    width: 100%;
+    height: 42px;
+    font-family: "Asap";
+    font-size: 36px;
+    line-height: 42px;
+    color: #000000;
+    @include desktop{
+      margin: 15px;
+      padding: 21px 24px;
+      font-size: 48px;
+      font-family: 'Asap';
+    }
+  }
+}
+
 .links-wrapper {
     width: 480px;
     @include desktop{
       flex-direction: row;
       display: flex;
-      margin: 0;
-      padding: 175px 0;
+      margin: 20px -60px;
+      padding-top: 70px;
     }
-    h2 {
-        padding: 0;
-        width: 480px;
-        height: 42px;
-        font-family: "Asap";
-        font-size: 36px;
-        line-height: 42px;
-        color: #000000;
-        // @include desktop{
-        //   margin: auto;
-        //   display: flex;
-        //   width: 852px;
-        // }
-
-    }
-    article {
         p {
             width: 377px;
             font-family: "Noto Sans";
@@ -118,8 +116,11 @@
             line-height: 40px;
             color: #000000;
             margin: 40px;
+            @include desktop{
+              padding: 40px;
+              margin: 15px 40px;
+            }
         }
-    }
     .benifits{
       .green-btn {
           background-color: #4FC8A1;
@@ -135,6 +136,12 @@
           font-weight: 300;
           text-shadow: none;
           letter-spacing: 0.8px;
+          @include desktop {
+            display: block;
+            width: 319px;
+            height: 66px;
+            font-size: 26px;
+          }
       }
     }
     .nw-program {
@@ -152,6 +159,12 @@
             font-weight: 300;
             text-shadow: none;
             letter-spacing: 0.8px;
+            @include desktop {
+              display: block;
+              width: 319px;
+              height: 66px;
+              font-size: 26px;
+            }
         }
     }
     .involved {
@@ -166,6 +179,13 @@
             font-weight: 300;
             text-shadow: none;
             letter-spacing: 0.8px;
+            @include desktop {
+              display: block;
+              width: 319px;
+              height: 66px;
+              font-size: 26px;
+              padding: 6px 85px;
+            }
         }
     }
 }
