--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -795,10 +795,6 @@ div .secondary {
   cursor: pointer;
   color: #248E6A; }
 
-@media (min-width: 73rem) {
-  .site-content {
-    margin: 58px 80px; } }
-
 .site-main .home-wrapper {
   width: 480px;
   height: 585px;
@@ -867,6 +863,21 @@ div .secondary {
         margin: 90px 100px;
         text-align: center; } }
 
+.link-title h2 {
+  padding: 0;
+  width: 100%;
+  height: 42px;
+  font-family: "Asap";
+  font-size: 36px;
+  line-height: 42px;
+  color: #000000; }
+  @media (min-width: 73rem) {
+    .link-title h2 {
+      margin: 15px;
+      padding: 21px 24px;
+      font-size: 48px;
+      font-family: 'Asap'; } }
+
 .links-wrapper {
   width: 480px; }
   @media (min-width: 73rem) {
@@ -875,23 +886,19 @@ div .secondary {
           flex-direction: row;
       display: -ms-flexbox;
       display: flex;
-      margin: 0;
-      padding: 175px 0; } }
-  .links-wrapper h2 {
-    padding: 0;
-    width: 480px;
-    height: 42px;
-    font-family: "Asap";
-    font-size: 36px;
-    line-height: 42px;
-    color: #000000; }
-  .links-wrapper article p {
+      margin: 20px -60px;
+      padding-top: 70px; } }
+  .links-wrapper p {
     width: 377px;
     font-family: "Noto Sans";
     font-size: 20px;
     line-height: 40px;
     color: #000000;
     margin: 40px; }
+    @media (min-width: 73rem) {
+      .links-wrapper p {
+        padding: 40px;
+        margin: 15px 40px; } }
   .links-wrapper .benifits .green-btn {
     background-color: #4FC8A1;
     border-radius: 6px;
@@ -906,6 +913,12 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
+    @media (min-width: 73rem) {
+      .links-wrapper .benifits .green-btn {
+        display: block;
+        width: 319px;
+        height: 66px;
+        font-size: 26px; } }
   .links-wrapper .nw-program .green-btn {
     background-color: #4FC8A1;
     border-radius: 6px;
@@ -920,6 +933,12 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
+    @media (min-width: 73rem) {
+      .links-wrapper .nw-program .green-btn {
+        display: block;
+        width: 319px;
+        height: 66px;
+        font-size: 26px; } }
   .links-wrapper .involved .red-btn {
     padding: 17px 70px;
     background-color: #F76072;
@@ -931,6 +950,13 @@ div .secondary {
     font-weight: 300;
     text-shadow: none;
     letter-spacing: 0.8px; }
+    @media (min-width: 73rem) {
+      .links-wrapper .involved .red-btn {
+        display: block;
+        width: 319px;
+        height: 66px;
+        font-size: 26px;
+        padding: 6px 85px; } }
 
 .support-wrapper {
   width: 480px;
