--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -2,46 +2,57 @@
 # About Page
 --------------------------------------------------------------*/
 // General Setting
+
 * {
 	box-sizing: border-box;
 }
-
 // @media screen and (max-width: 480px) {
 .about-wrapper {
-	max-width:$mobile_width;
+	max-width: $mobile_width;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
 	align-items: center;
 	background-color: green;
+
 	h1 {
 		font-family: $font_title;
-		font-size:$h1_size_mob;
+		font-size: $h1_size_mob;
 		font-weight: normal;
 		line-height: $basic_hline_height * 4.2;
 		text-align: left;
-		color:$black;
-
+		color: $black;
 	}
 }
 
-// General layout
-		.site-content {
-			max-width: 1240px;
-			margin: 0 auto;
-			padding-left: 20;
-			padding-right: 20;
-		}
+.archive {
+	margin-left: 0 auto;
 
-.target {
-	width: 100%;
-	height: auto;
-	height: 160px;
-	padding:$basic_pading;
-	display: none;
+	.target {
+		background-color: grey;
+		width: 100%;
+		height: 10%;
+		height: 160px;
+		padding: $basic_pading;
+		display: none;
+	}
 }
 
+.left-red-border {
+	width: 80%;
+	height: 90px;
+	border-left: 5px solid $color_bar_pink;
+	padding-left: 20px;
+	padding-right: 10px;
+}
 
+.red-border-container {
+	width: $mobile_width;
+	padding: 10px;
+	overflow: visible;
+	height: auto;
+	margin-bottom: 70px;
+}
 // 		.largImg {
 //         width: 100%;
 //         height: 50vw;
