--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,6 +1,24 @@
 
 // special CFS div
 
+
+
+
+.cfsBorder{
+ width:100%;
+ height: 150px;
+ border-left: 5px solid $color_bar_pink ;
+ margin-left: 20px;
+
+
+}
+
+.cfscontainer{
+ width: 100%;
+ overflow:visible;
+ height: auto;
+}
+
   //  <div class="cfsBorder">
   //  <div class="cfscontainer"> here will be text area <div>
   //  <div>
@@ -37,5 +55,5 @@
 //   color: $white;
 //   font-size: 20px;
 //   border: 0;
-  border-radius:10px;
+
 }
