--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,22 +1,21 @@
 
 // special CFS div
 
-
-
-
-.cfsBorder{
- width:100%;
+.left-red-border{
+ width:60%;
+text-align: justify;
  height: 150px;
  border-left: 5px solid $color_bar_pink ;
- margin-left: 20px;
-
+padding-left: 20px;
+padding-right: 10px;
 
 }
 
-.cfscontainer{
- width: 100%;
+.red-border-container{
+ width: 80px;
+ padding: 10px;
  overflow:visible;
- height: auto;
+  height: auto;
 }
 
   //  <div class="cfsBorder">
