--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -527,28 +527,11 @@ object {
   display: flex; }
 
 .main-navigation {
-  width: 100%; }
+  padding-top: 40px;
+  margin-right: 38px; }
 
 div .menu-primary-menu-container {
   width: 100%; }
-
-.montessori-logo {
-  width: 15rem;
-  height: 5rem; }
-  .montessori-logo img {
-    height: 100%;
-    width: 100%; }
-
-@media (min-width: 48rem) {
-  .menu-primary-menu-container {
-    display: none; } }
-
-.montessori-logo {
-  width: 10rem;
-  height: 2rem; }
-  .montessori-logo img {
-    height: 100%;
-    width: 100%; }
 
 .main-navigation-container {
   display: -ms-flexbox;
@@ -580,14 +563,11 @@ div .menu-primary-menu-container {
   -ms-flex-pack: justify;
       justify-content: space-between;
   height: 5rem; }
-  @media (min-width: 60rem) {
+  @media (min-width: 48rem) {
     .main-navigation-container {
       display: inline-block;
       height: 8rem;
       padding: 0 15px; } }
-
-.main-navigation {
-  width: 100%; }
 
 @media (min-width: 60rem) {
   .menu-primary-menu-container {
@@ -648,7 +628,7 @@ div .secondary {
       margin: 0;
       padding: 30px 0 30px 10px;
       width: 20rem;
-      min-width: 12rem;
+      min-width: 16rem;
       height: 8rem; } }
   .montessori-logo img {
     position: relative;
@@ -683,8 +663,11 @@ div .secondary {
   top: 0; }
 
 .site-content {
-  padding-top: 87px;
+  padding-top: 110px;
   top: 0; }
+
+.home .site-header {
+  position: absolute; }
 
 /*--------------------------------------------------------------
 # Footer
