--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -579,7 +579,7 @@ div .menu-primary-menu-container {
         text-decoration: none;
         color: #000000;
         color: #231F20;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         border-top: 6px solid transparent;
         list-style: none;
         padding: 15px 0;
@@ -1089,10 +1089,12 @@ body {
   margin: 0 auto; }
   .main-history img {
     float: left;
-    width: 227px;
-    height: 244px; }
+    width: 190px;
+    height: 190px; }
   .main-history p {
-    text-align: left; }
+    padding-top: 4px;
+    text-align: left;
+    display: block; }
 
 .main-philosophy {
   display: -ms-flexbox;
@@ -1192,40 +1194,38 @@ body {
         background-color: #fff;
         transform: rotateY(180deg); } }
 
-/*.main-history,
-.main-materials,
-.philosophy-section{
-padding-bottom: 60px;
-   border-bottom: 2px solid #2EB688;
-}*/
-/*.history-thumbnail{
-    img{
-
-    }
-}*/
 /*
 .main-materials{
      padding: 0px;
      @include flex(flex-start,space-between);
     flex-wrap: wrap;
     }
- .philosophy-thumbnails {
-
-     overflow: hidden;
-    height: 640px;
-    img{
-
-    width: 200px;
-    height: 200px;
-
-}}
-
-
-
-
-
+*/
+.benefits li {
+  list-style-type: circle; }
 
 /*Start Resources Section  */
+.green-btn {
+  background-color: #4fc8a1;
+  border-radius: 6px;
+  font-family: Noto Sans;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 14px;
+  color: #fff;
+  margin-left: -4px;
+  padding: 16px 42px;
+  font-weight: 300;
+  text-shadow: none;
+  letter-spacing: .8px; }
+  @media (min-width: 60rem) {
+    .green-btn {
+      display: block;
+      width: 331px;
+      height: 65px;
+      font-size: 16px; } }
+
 /*--------------------------------------------------------------
 # About Page
 --------------------------------------------------------------*/
