--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -23,29 +23,48 @@ padding-top: 4px;
 ////************philosophy Section ************/////
 
 .main-philosophy{
+      margin: 0 auto;
+  max-width: 650px;
     @include flex(center,space-around);
     flex-wrap: wrap;
         position: relative;
-        @include desktop{width:900px;
-}}
+        @include desktop{ max-width: 950px; height: 640px;
+}
 .philosophy-grid{
-    /*background-color:#AFF1D3;*/
-
+  display: -ms-flexbox;
+display: flex;
+-ms-flex-align: center;
+align-items: center;
+-ms-flex-pack: distribute;
+justify-content: space-around;
+-ms-flex-wrap: wrap;
+flex-wrap: wrap;
+position: relative;
+width: 200px;
+height:200px;
+background-color: #AFF1D3;
+margin-top: 20px;
 
      @include flex(center,space-around);
      flex-wrap: wrap;
          position: relative;
-           @include tablet{width:27%;
-
+           @include desktop{
+               width: 300px;
+               height: 300px;
+               background-color: #AFF1D3;
              -webkit-transition: 1.9s;
          -webkit-transform-style: preserve-3d;
          -moz-transition: 1.9s;
          -moz-transform-style: preserve-3d;
          -o-transition: 1.9s;
          -o-transform-style: preserve-3d;
-         transition: 1.9s;
+         transition: 1s;
          transform-style: preserve-3d;
          &:hover {
+           -webkit-backface-visibility: hidden;
+          -moz-backface-visibility: hidden;
+          -o-backface-visibility: hidden;
+          backface-visibility: hidden;
              -webkit-transform: rotateY(180deg);
              -moz-transform: rotateY(180deg);
              -o-transform: rotateY(180deg);
@@ -53,7 +72,7 @@ padding-top: 4px;
          }
        }
     .philosophy-img {
-      z-index: -1;
+      z-index: 2;
       height: auto;
       text-align: center;
       overflow: hidden;
@@ -66,8 +85,15 @@ padding-top: 4px;
         position: relative;
         width:100%;
         height:200px;
-        img{@include desktop{width:367px;
-        height:367px;}
+        img{position: absolute;;
+          top: 46px;
+           right: 63px;
+           width:70px;
+        height:70px;
+          @include desktop{
+            width:100px;
+        height:100px;
+      }
     }}
 h2{ z-index: 1;
      text-align: center;
@@ -81,7 +107,10 @@ h2{ z-index: 1;
      overflow: hidden;
      padding: 20px;
      bottom: -18px;
-  @include desktop{   -webkit-backface-visibility: hidden;
+     line-height: 1.2;
+  @include desktop{
+    font-size: 1.4rem;
+      -webkit-backface-visibility: hidden;
      -moz-backface-visibility: hidden;
      -o-backface-visibility: hidden;
      backface-visibility: hidden;}
@@ -93,11 +122,13 @@ h2{ z-index: 1;
        display: inline-block;
          font-family: $font_body;
         position: absolute;
-        top:0px;
+        top:-17px;
+        overflow-y: scroll;
+        font-size: 1.3rem;
         left: 0px;
         z-index: 1000000;
-       height: 200px;
-        width:400px;
+       height: 300px;
+        width:300px;
         border-radius: 10px;
         border: 1px solid #248E6A;
         text-align: left;
@@ -105,7 +136,8 @@ h2{ z-index: 1;
         padding: 5px;
         visibility: hidden;
       @include desktop{
-
+        overflow: scroll;
+        font-size: 1.2rem;
           visibility: visible;
          -webkit-backface-visibility: hidden;
         -moz-backface-visibility: hidden;
@@ -119,7 +151,7 @@ h2{ z-index: 1;
 
     }
 }
-}
+}}
 //////************Start philosophy Section ************//////
 
 
@@ -150,19 +182,19 @@ h2{ z-index: 1;
 /*Start Resources Section  */
 
 .green-btn {
-  background-color: #4fc8a1;
-border-radius: 6px;
-font-family: Noto Sans;
-font-size: 18px;
-font-weight: 700;
-text-align: center;
-line-height: 14px;
-color: #fff;
-margin-left: -4px;
-padding: 16px 42px;
-font-weight: 300;
-text-shadow: none;
-letter-spacing: .8px;
+    background-color: #4FC8A1;
+    border-radius: 6px;
+    font-family: "Noto Sans";
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 30px;
+    color: #fff;
+    margin-left: 80px;
+    padding: 17px 70px;
+    font-weight: 300;
+    text-shadow: none;
+    letter-spacing: 0.8px;
     @include desktop {
 
     display: block;
